--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   },
   "dependencies": {
     "axios": "^0.21.1",
+    "dotenv": "^16.4.5",
+    "emailjs-com": "^3.2.0",
     "next": "latest",
     "next-themes": "latest",
     "react": "18.2.0",
